新增删除任务文件的功能 修复多文件下载任务无法创建 支持获取可下载列表拓展